objects/EUR_CRM_CT_Account_Target_Group_Setup__mdt.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Country__c</fullName>
        <label>Country</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_PROFS_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PROFS available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_PROS_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PROS Available</label>
        <type>Checkbox</type>
    </fields>
    <label>CT Account Target Group Setup</label>
    <pluralLabel>CT Account Target Group</pluralLabel>
</CustomObject>